[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# exclude = ["tests/"]

# --- Poetry Configuration ---
[tool.poetry]
name = "hdg_boiler"
version = "0.10.3"
description = "Home Assistant Custom Component for HDG Bavaria Boilers"
authors = ["@banter240"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
homeassistant = ">=2024.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-homeassistant-custom-component = "^0.13"

# Recommended development tools:
ruff = "^0.4.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
